--- a/backend/package.json
+++ b/backend/package.json
@@ -41,6 +41,7 @@
     "class-validator": "^0.14.1",
     "date-fns": "^3.6.0",
     "dotenv": "^16.4.5",
+    "joi": "^17.13.3",
     "mongoose": "^8.7.1",
     "newrelic": "^11.18.0",
     "passport-jwt": "^4.0.1",
